--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^7.0.2",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.15.0",
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
